--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "node ace build --production",
     "start": "node server.js",
     "lint": "eslint . --ext=.ts",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "test": "jest"
   },
   "devDependencies": {
     "@adonisjs/assembler": "^5.3.9",
@@ -16,6 +17,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-adonis": "^2.1.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.4.7",
     "pino-pretty": "^7.3.0",
     "prettier": "^2.5.1",
     "typescript": "~4.5",
