--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,14 @@
 PORT=3333
 HOST=0.0.0.0
 NODE_ENV=development
-APP_KEY=bzl2oncxtEtvmjnbSaoPj1I7Nklb2Q3s
+APP_KEY=secret
 DRIVE_DISK=local
 DB_CONNECTION=sqlite
 OW_API=secret
+
+# if DB_CONNECTION = mysql
+#MYSQL_HOST=host
+#MYSQL_PORT=port
+#MYSQL_USER=user
+#MYSQL_PASSWORD=password
+#MYSQL_DB_NAME=name
