--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "@adonisjs/core": "^5.4.2",
     "@adonisjs/lucid": "^16.3.2",
     "@adonisjs/repl": "^3.1.7",
-    "adonis-scheduler": "github:nrempel/adonis-scheduler#adonis-v3",
     "adonis5-scheduler": "^2.0.2",
     "axios": "^0.24.0",
     "luxon": "^2.3.0",
+    "mysql": "^2.18.1",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^4.2.0"
   }
 }
