--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios": "^0.24.0",
     "luxon": "^2.3.0",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21",
