--- a/.github/workflows/github-actions-test.yml
+++ b/.github/workflows/github-actions-test.yml
@@ -2,7 +2,9 @@
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
 name: Test, Create and publish a Docker image
-on: [push, pull_request]
+on:
+  push:
+    branches: ['main']
 jobs:
   test:
     runs-on: ubuntu-latest
