Change DB to Pgsql

--- a/.env.example
+++ b/.env.example
@@ -6,9 +6,8 @@ DRIVE_DISK=local
 DB_CONNECTION=sqlite
 OW_API=secret
 
-# if DB_CONNECTION = mysql
-#MYSQL_HOST=host
-#MYSQL_PORT=port
-#MYSQL_USER=user
-#MYSQL_PASSWORD=password
-#MYSQL_DB_NAME=name
+PG_HOST=localhost
+PG_PORT=5432
+PG_USER=lucid
+PG_PASSWORD=
+PG_DB_NAME=lucid
