--- a/package.json
+++ b/package.json
@@ -31,11 +31,10 @@
     "adonis5-scheduler": "^2.0.2",
     "axios": "^0.24.0",
     "luxon": "^2.3.0",
-    "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "pg": "^8.9.0",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
-    "source-map-support": "^0.5.21",
-    "sqlite3": "^5.0.2"
+    "source-map-support": "^0.5.21"
   }
 }
