New api Token security new readme

--- a/ace-manifest.json
+++ b/ace-manifest.json
@@ -1,5 +1,25 @@
 {
   "commands": {
+    "api:token": {
+      "settings": {
+        "loadApp": true,
+        "stayAlive": false
+      },
+      "commandPath": "./commands/TokenApi",
+      "commandName": "api:token",
+      "description": "Generate a token to use API",
+      "args": [
+        {
+          "type": "string",
+          "propertyName": "name",
+          "name": "name",
+          "required": true,
+          "description": "Name of the token"
+        }
+      ],
+      "aliases": [],
+      "flags": []
+    },
     "dump:rcfile": {
       "settings": {},
       "commandPath": "@adonisjs/core/build/commands/DumpRc",
