--- a/compose.yml
+++ b/compose.yml
@@ -12,21 +12,21 @@ services:
       - .env
     volumes:
       - ./:/app
+    links:
+      - 'postgres'
     command: node ace serve --watch --node-args="--inspect=0.0.0.0"
 
   postgres:
     image: postgres
-    container_name: dju_postgres
     environment:
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-admin}
-      POSTGRES_DB: ${POSTGRES_DB:-watch}
+      POSTGRES_DB: ${POSTGRES_DB:-dju}
       POSTGRES_HOST_AUTH_METHOD: md5
     volumes:
       - postgres:/var/lib/postgresql/data
     ports:
       - "5432:5432"
-    restart: unless-stopped
 volumes:
   postgres:
     driver: local
