--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "pg": "^8.9.0",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "zod": "^3.20.6"
   }
 }
